--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,38 @@ div{
     padding: 10px;
     font-size: 20px;
 }
+/*风格元素*/
+.style_font{
+    color: #009210;
+    background-color: #ffd7d5;
+    white-space: normal;
+    word-break: break-all;
+    word-wrap: break-word; 
+    line-height: 48px;
+    padding: 10px;
+    font-size: 20px;
+
+    width:100%;
+    height:174px;
+    border-radius:20px;
+}
+
+/*字体按钮样式*/
+.font_btn{
+    border-radius: 10px;
+    border: 1px solid black;
+    font-size: 18px;
+    line-height: 35px;
+    text-align: center;
+    height: 40px;
+    width: 100px;
+}
+
+/*颜色按钮样式*/
+
+.color_btn{
+    border-radius: 10px;
+    height: 40px;
+    width: 60px;
+   
+}
